<resources>
    <string name="app_name">Time Wize</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">about</string>
    <string name="login">login</string>
    <string name="register">Registration</string>
    <string name="timer_capture">timer capture</string>
    <string name="camera">camera</string>
    <string name="get_the_best_swimming_workout_and_never_have_problems_with_figuring_out_how_to_swim_swimup_provides_personal_swimming_training_plans_created_just_for_you">Get the best swimming workout and never have problems with figuring out how to swim! SwimUp provides personal swimming training plans created just for you.</string>
    <string name="pic">pic</string>
    <string name="capture">capture</string>
    <string name="todo">todo</string>
    <string name="Login">Login</string>
    <string name="cancel">cancel</string>
    <string name="time_wize">Time wize</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="tasks">Tasks</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="select_time">Select Time</string>
    <string name="laps">Laps:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="user_email" />
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_time_wize_the_ultimate_time_management_app_designed_to_help_you_optimize_your_workday_and_increase_your_productivity_we_understand_that_time_is_a_valuable_resource_and_our_app_is_here_to_empower_you_to_make_the_most_of_every_moment_with_a_range_of_innovative_features_such_as_task_lists_reminders_time_tracking_and_gamification_time_wize_motivates_you_to_stay_on_top_of_your_schedule_and_achieve_your_goals_like_never_before_our_simple_and_intuitive_user_interface_ensures_that_navigating_and_utilizing_all_the_app_s_features_is_a_breeze_whether_you_re_a_busy_professional_a_student_with_multiple_deadlines_or_someone_seeking_to_enhance_their_time_management_skills_time_wize_is_your_ultimate_companion_register_or_log_in_now_and_take_control_of_your_time_to_unlock_your_true_potential">Welcome to Time wize, the ultimate time management app designed to help you optimize your workday and increase your productivity. We understand that time is a valuable resource, and our app is here to empower you to make the most of every moment. With a range of innovative features such as task lists, reminders, time tracking, and gamification, Time wize motivates you to stay on top of your schedule and achieve your goals like never before. Our simple and intuitive user interface ensures that navigating and utilizing all the app\'s features is a breeze. Whether you\'re a busy professional, a student with multiple deadlines, or someone seeking to enhance their time management skills, Time wize is your ultimate companion. Register or log in now and take control of your time to unlock your true potential.</string>
    <string name="Goal">Goals</string>
</resources>