<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_about"

            android:icon="@drawable/abt"

            android:title="@string/about" />

        <item

            android:id="@+id/nav_login"

            android:icon="@drawable/login"

            android:title="@string/login" />

        <item

            android:id="@+id/nav_reg"

            android:icon="@drawable/reg"

            android:title="@string/register" />

        <item
            android:id="@+id/nav_tasks"

            android:icon="@drawable/task"

            android:title="@string/tasks" />

        <item
            android:id="@+id/nav_Goal"

            android:icon="@drawable/flag"

            android:title="@string/Goal" />

        <item

            android:id="@+id/nav_timer"

            android:icon="@drawable/timer"

            android:title="@string/timer_capture" />

        <item

            android:id="@+id/nav_camera"

            android:icon= "@drawable/ic_menu_camera"

            android:title="@string/camera"/>
        <item

            android:id="@+id/nav_gallery"

            android:icon= "@drawable/gallery"

            android:title="gallery"/>
        <item

            android:id="@+id/LogOut"

            android:icon= "@drawable/logout"

            android:title="@string/log_out"/>
    </group>
</menu>